force-app/main/default/objects/Jira_Connector_Field__c/Jira_Connector_Field__c.object-meta.xml
<CustomObject>
    <description>Discovered Jira issue fields for a configured connector, project, and issue type.</description>
    <label>Jira Connector Field</label>
    <nameField>
        <displayFormat>JCF-{0000}</displayFormat>
        <label>Jira Connector Field Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jira Connector Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>