force-app/main/default/objects/Jira_Connector_Field__c/fields/Allowed_Values_JSON__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Values_JSON__c</fullName>
    <description>Allowed Jira values serialized from field metadata for select-like fields.</description>
    <label>Allowed Values JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>