force-app/main/default/objects/Jira_Connector_Field__c/fields/Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Jira field is a custom field.</description>
    <label>Custom Field</label>
    <type>Checkbox</type>
</CustomField>