force-app/main/default/objects/Jira_Connector_Field__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <description>Human-readable Jira field label from Jira metadata.</description>
    <label>Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>