force-app/main/default/objects/Jira_Connector_Field__c/fields/Field_Key__c.field-meta.xml
<CustomField>
    <fullName>Field_Key__c</fullName>
    <description>Jira field key discovered from the selected project and issue type.</description>
    <label>Field Key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>