force-app/main/default/objects/Jira_Connector_Field__c/fields/Last_Seen_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Seen_At__c</fullName>
    <description>Date and time when this field was last seen in Jira metadata sync.</description>
    <label>Last Seen At</label>
    <type>DateTime</type>
</CustomField>