force-app/main/default/objects/Jira_Connector_Field__c/fields/Operations__c.field-meta.xml
<CustomField>
    <fullName>Operations__c</fullName>
    <description>Comma-separated Jira operations supported by this field, such as set.</description>
    <label>Operations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>