force-app/main/default/objects/Jira_Connector_Field__c/fields/Raw_Metadata_JSON__c.field-meta.xml
<CustomField>
    <fullName>Raw_Metadata_JSON__c</fullName>
    <description>Raw Jira field metadata snapshot used for troubleshooting sync behavior.</description>
    <label>Raw Metadata JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>