force-app/main/default/objects/Jira_Connector_Field__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether Jira reports this field as required for issue creation.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>