force-app/main/default/objects/Jira_Connector_Field__c/fields/Schema_Type__c.field-meta.xml
<CustomField>
    <fullName>Schema_Type__c</fullName>
    <description>Jira schema type reported for the field.</description>
    <label>Schema Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>